Started logic rotate files

--- a/trmua-utils/App.config
+++ b/trmua-utils/App.config
@@ -10,6 +10,9 @@
             <setting name="ThumbsFolderPath" serializeAs="String">
                 <value>null</value>
             </setting>
+            <setting name="RotateFolderPath" serializeAs="String">
+                <value />
+            </setting>
         </trmua_utils.Properties.Settings>
     </userSettings>
 </configuration>
