--- a/trmua-utils/Properties/Settings.settings
+++ b/trmua-utils/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="ThumbsFolderPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">null</Value>
     </Setting>
+    <Setting Name="RotateFolderPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
