--- a/trmua-utils/trmua-utils.csproj
+++ b/trmua-utils/trmua-utils.csproj
@@ -5,13 +5,8 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>trmua_utils</RootNamespace>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="utils\" />
-  </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
@@ -27,5 +22,14 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Windows.ImplementationLibrary" Version="1.0.240122.1" />
+		<PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.26100.1" />
+		<PackageReference Include="System.Diagnostics.Contracts" Version="4.3.0" />
+		<PackageReference Include="System.Security.Principal.Windows" Version="5.0.0" />
+		<PackageReference Include="System.Windows.Extensions" Version="8.0.0" />
+
+
+	</ItemGroup>
 
 </Project>
