--- a/trmua-utils/trmua-utils.csproj
+++ b/trmua-utils/trmua-utils.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>trmua_utils</RootNamespace>
+	  <UseWindowsForms>true</UseWindowsForms>
+	  <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
@@ -23,10 +25,6 @@
     </None>
   </ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Windows.ImplementationLibrary" Version="1.0.240122.1" />
-		<PackageReference Include="Microsoft.Windows.SDK.Contracts" Version="10.0.26100.1" />
-		<PackageReference Include="System.Diagnostics.Contracts" Version="4.3.0" />
-		<PackageReference Include="System.Security.Principal.Windows" Version="5.0.0" />
 		<PackageReference Include="System.Windows.Extensions" Version="8.0.0" />
 
 
