added read/write config support

--- a/trmua-utils/App.config
+++ b/trmua-utils/App.config
@@ -8,9 +8,15 @@
     <userSettings>
         <trmua_utils.Properties.Settings>
             <setting name="ThumbsFolderPath" serializeAs="String">
-                <value>null</value>
+                <value />
             </setting>
             <setting name="RotateFolderPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AutoMoveTargetFolderPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="AutoMoveDestinationFolderPath" serializeAs="String">
                 <value />
             </setting>
         </trmua_utils.Properties.Settings>
