--- a/trmua-utils/Properties/Settings.settings
+++ b/trmua-utils/Properties/Settings.settings
@@ -3,9 +3,15 @@
   <Profiles />
   <Settings>
     <Setting Name="ThumbsFolderPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)">null</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="RotateFolderPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AutoMoveTargetFolderPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AutoMoveDestinationFolderPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
   </Settings>
